Made Line-line intersection and addded live links to individual repo

--- a/lineLineIntersection/index.html
+++ b/lineLineIntersection/index.html
@@ -9,7 +9,7 @@
     body {
       padding: 0;
       margin: 0;
-      background-color: #dedede;
+      background-color: #202020;
     }
   </style>
   <!-- <script src="../p5.min.js"></script> -->
