some stupid rotation matrix projects

--- a/shapeRotation/index.html
+++ b/shapeRotation/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Collatz Conjecture</title>
+  <title>Vector Rotation</title>
   <style>
     body {
       padding: 0;
@@ -17,10 +17,10 @@
   <!-- <script src="../addons/p5.sound.js"></script> -->
   <script src="sketch.js"></script>
 </head>
-
 <body>
   <main>
   </main>
+  <span id="span"></span>
 </body>
 
 </html>
