--- a/bubbleSort/index.html
+++ b/bubbleSort/index.html
@@ -12,7 +12,7 @@
       background-color: hsl(300, 100%, 30%);
     }
   </style>
-  <!-- <script src="../p5.js"></script> -->
+  <script src="../p5.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.min.js" integrity="sha512-WJXVjqeINVpi5XXJ2jn0BSCfp0y80IKrYh731gLRnkAS9TKc5KNt/OfLtu+fCueqdWniouJ1ubM+VI/hbo7POQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- <script src="../addons/p5.sound.js"></script> -->
   <script src="sketch.js"></script>
