--- a/tusiCouple/index.html
+++ b/tusiCouple/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Metro</title>
+  <title>Tusi Couple</title>
   <style>
     body {
       padding: 0;
       margin: 0;
-      background-color: hsl(300, 100%, 30%);
+      background-color: rgb(26, 26, 26);
     }
   </style>
   <script src="../p5.min.js"></script>
