--- a/lens/index.html
+++ b/lens/index.html
@@ -10,6 +10,8 @@
       padding: 0;
       margin: 0;
       background-color: #202020;
+      color: white;
+      font-size: 30px;
     }
   </style>
   <script src="../p5.min.js"></script>
